# unattended-setups

./: Cargo.toml  LICENSE  README.md  setup-docker.sh  setup-zsh.sh
.github/: dependabot.yml
.github/workflows/: build.yaml  build.yml  pull-request.yml
scripts/: setup-bat.sh  setup-docker.sh  setup-dust.sh  setup-glow.sh  setup-netbird.sh  setup-ripgrep.sh  setup-zsh.sh
src/: main.rs  setup.rs  setup_manager.rs  user_interface.rs
