[package]
name = "unattended-setups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = { version = "1.0"}
serde = { version = "1.0", features = ["derive"] }
tui = {version = "0.19", features = ['crossterm', 'serde'] }
crossterm = {version = "0.25", features = [ "serde" ] }
crossbeam-channel = "0.5"


[target.'cfg(unix)'.dependencies]
openssl = {features = ["vendored"], version = "0.10"}
